2014-05-23  Richard Henderson  <rth@twiddle.net>

	* nptl/pt-vfork.c (vfork_resolve): Rename from vfork_ifunc.
	(vfork, __vfork): Define via compat_symbol.

	* nptl/pt-vfork.c: Error if !HAVE_IFUNC.
	[!HAVE_IFUNC] (vfork_compat): Remove.
	[!HAVE_IFUNC] (DEFINE_VFORK): Remove.

2014-05-23  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16978]
	* posix/tar.h [!__USE_XOPEN2K] (TSVTX): Define macro.
	* conform/Makefile (test-xfail-POSIX/tar.h/conform): Remove
	variable.

2014-05-23  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/alpha/nptl/Makefile: Merge into...
	* sysdeps/unix/sysv/linux/alpha/Makefile: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/Versions: Merge into...
	* sysdeps/unix/sysv/linux/alpha/Versions: ... here.

	* sysdeps/unix/sysv/linux/alpha/nptl/aio_cancel.c: Moved ...
	* sysdeps/unix/sysv/linux/alpha/aio_cancel.c: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/bits/local_lim.h: Moved ...
	* sysdeps/unix/sysv/linux/alpha/bits/local_lim.h: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/bits/pthreadtypes.h: Moved ...
	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/bits/semaphore.h: Moved ...
	* sysdeps/unix/sysv/linux/alpha/bits/semaphore.h: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/c++-types.data: Moved ...
	* sysdeps/unix/sysv/linux/alpha/c++-types.data: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/createthread.c: Moved ...
	* sysdeps/unix/sysv/linux/alpha/createthread.c: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/ld.abilist: Moved ...
	* sysdeps/unix/sysv/linux/alpha/ld.abilist: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/libBrokenLocale.abilist: Moved ...
	* sysdeps/unix/sysv/linux/alpha/libBrokenLocale.abilist: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/libanl.abilist: Moved ...
	* sysdeps/unix/sysv/linux/alpha/libanl.abilist: ... here.
	* sysdeps/unix/sysv/linux/alpha/nptl/libc.abilist: Moved ...